--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,55 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
+   
+
 }
+
+.header{
+    /* position: fixed;
+    top: 0;
+    width: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0px 0px 15px 15px;
+    padding: 15px 30px 15px 30px;
+    background-color: rgb(255, 255, 255);
+}
+.header .right{
+display: flex;
+gap: 10px;
+}
+.header .right input{
+    border: none;
+    outline: none;
+    background-color: antiquewhite;
+}
+.header .right .input-area{
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+.header select{
+    border: none;
+    background-color: antiquewhite;
+    border-radius: 10px;
+    outline: none;
+    color: rgb(123, 130, 135);
+    padding: 10px;
+    
+   
+}
+
 table{
     margin: 50px 0;
     width: 90%;
     align-self: center;
     border-collapse: collapse;
+    background-color: rgb(255, 255, 255);
 }
 table td{
     vertical-align: top;
@@ -172,11 +215,12 @@ thead th{
     font-size: 15px;
 }
 
-.no-of-users{
+.no-of-users, .review{
     font-size: 12px;
     color:rgb(110, 110, 110);
     padding-top:8px;
 }
+
 
 .social-container{
     margin-top: 8px;
@@ -214,10 +258,12 @@ thead th{
 }
 
 .rankings-by{
-    background-color: rgba(129, 255, 255,0.4);
+    color: rgba(0, 179, 255, 0.4);
+    background-color: rgba(167, 228, 254, 0.4);
     border-left: 5px solid rgb(44, 180, 180);
     margin-top: 8px;
     border-radius: 0 10px 10px 0;
+    padding: 8px;
 }
 
 .rankings-by img{
@@ -227,22 +273,25 @@ thead th{
 
 .rankings-by p{
     padding-left:5px;
-    color: rgb(44, 180, 180);
+    color: rgba(0, 179, 255, 0.4);
     font-size: 14px;
     font-weight: bold;
 }
 
-footer{
-    background-color:rgb(79, 189, 191);
+footer {
+    background-color: rgb(79, 189, 191);
     height: 50px;
     width: 100%;
     text-align: center;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:center;
-}
-
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+  
 footer div{
     color: white;
 }
@@ -251,4 +300,26 @@ footer a{
     text-decoration: none;
     color: black ;
     font-weight: bold;
+}
+
+.featured{
+    background-color: rgba(255, 222, 181, 0.4) ;
+
+}
+
+.college-info{
+    position: relative;
+}
+
+.featured-div{
+    position: absolute;
+    top:0;
+    background-color: rgb(255, 0, 115);
+    color: white;
+    width: 100px;
+    border-radius:0 0 50px 50px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    padding:3px 0;
 }
